--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -18,9 +18,17 @@
       max-width: 100%;
       max-height: 100%;
     }
+    #controls {
+            margin-left: 20px;
+        }
   </style>
 </head>
 <body>
+  <div id="controls">
+    <button class="button">Atacar</button>
+    <button class="button">Mover</button>
+    <button class="button">Passar</button>
+</div>
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
 
   <script>
