--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -84,8 +84,12 @@ function atribuirIDsNumericos() {
 
 // Chamar a função para atribuir IDs numéricos aos paths
 atribuirIDsNumericos();
+playersCores();
 
-  </script>
+  </script> 
+  <script src="/Partida/Partida.js"></script>
+
+
 <body>
   
 </html>
