--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -84,7 +84,8 @@ function atribuirIDsNumericos() {
 
 // Chamar a função para atribuir IDs numéricos aos paths
 atribuirIDsNumericos();
-playersCores();
+
+const playersCor = await playersCores();
 
   </script> 
   <script src="/Partida/Partida.js"></script>
