--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -86,6 +86,7 @@ function atribuirIDsNumericos() {
 atribuirIDsNumericos();
 
 const playersCor = await playersCores();
+console.log(playersCor)
 
   </script> 
   <script src="/Partida/Partida.js"></script>
