--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -85,7 +85,7 @@ function atribuirIDsNumericos() {
 // Chamar a função para atribuir IDs numéricos aos paths
 atribuirIDsNumericos();
 
-const playersCor = await playersCores();
+const playersCor = playersCores();
 console.log(playersCor);
 
   </script> 
