--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -64,7 +64,7 @@ territorio.setAttribute('transform', 'scale(1.05) translate(' + deslocamentoX + 
     this.setAttribute('transform', ''); // Restaurar o tamanho original
   });
 }  
-function atribuirIDsNumericos() {
+async function atribuirIDsNumericos() {
   const svgObject = document.getElementById('svgObject');
 
   // Adicionar um ouvinte de evento para o carregamento do documento SVG
