--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -64,6 +64,7 @@ territorio.setAttribute('transform', 'scale(1.05) translate(' + deslocamentoX + 
     this.setAttribute('transform', ''); // Restaurar o tamanho original
   });
 }  
+
 async function atribuirIDsNumericos() {
   const svgObject = document.getElementById('svgObject');
 
@@ -89,7 +90,7 @@ const playersCor = playersCores();
 console.log(playersCor);
 
   </script> 
-  <script src="/Partida/Partida.js"></script>
+  <script src="./Partida.js"></script>
 
 
 <body>
