--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -20,9 +20,10 @@
     }
   </style>
 </head>
+  <script src="/Partida/Partida.js"></script>
 
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
-
+  
   <script>
 // Função para identificar e destacar territórios
 function identificarTerritorios() {
