--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -87,7 +87,7 @@ async function atribuirIDsNumericos() {
 // Chamar a função para atribuir IDs numéricos aos paths
 atribuirIDsNumericos();
 
-const playersCor = playersCores();
+const playersCor = await playersCores();
 console.log(playersCor);
 
   </script> 
