--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -86,7 +86,7 @@ async function atribuirIDsNumericos() {
 // Chamar a função para atribuir IDs numéricos aos paths
 atribuirIDsNumericos();
 
-const playersCor = await playersCores();
+const playersCor = playersCores();
 console.log(playersCor);
 
   </script> 
