--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -21,6 +21,9 @@
   </style>
 </head>
 
+ <script src="/Partida/Partida.js"></script> <!-- Certifique-se de que o script Partida.js é carregado primeiro -->
+
+
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
   
   <script>
@@ -91,7 +94,6 @@ console.log(playersCor);
 
   </script> 
 
-<body>
-  <script src="/Partida/Partida.js"></script>
+</body>
   
 </html>
