--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -88,8 +88,12 @@ async function atribuirIDsNumericos() {
 
 // Chamar a função para atribuir IDs numéricos aos paths
 atribuirIDsNumericos();
+let Cores = [];
 
 const playersCor = playersCores();
+Cores = atribuirCores();
+
+console.log(Cores);
 console.log(playersCor);
 
   </script> 
