--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -91,7 +91,7 @@ atribuirIDsNumericos();
 let Cores = [];
 
 const playersCor = playersCores();
-Cores = atribuirCores();
+Cores = await atribuirCores();
 
 console.log(Cores);
 console.log(playersCor);
