--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -116,7 +116,8 @@
       const lobbyId = urlParams.get('id');
       const PartidaDados = await dadospartida(); // Aguarda a resolução da Promise e obtém os dados do lobby
 
-      
+      let cores = [];
+
         const playersCor = await playersCores();
         if (playersCor) {
           const cores = atribuirCores();
