--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -155,7 +155,7 @@
           },
           body: JSON.stringify({
               id: lobbyId, // Obter valor do campo de entrada
-              nJogadores: NumJogadores,
+              //nJogadores: NumJogadores,
               leaderId: PartidaDados.leaderId, // Criar validação de somente Admin criar partida
               lobbyName: `Partida de ${nomeUsuario}`,
               playerSlots: PartidaDados.playerSlots  
