--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -157,7 +157,7 @@
               id: lobbyId, // Obter valor do campo de entrada
               //nJogadores: NumJogadores,
               leaderId: PartidaDados.leaderId, // Criar validação de somente Admin criar partida
-              lobbyName: `Partida de ${nomeUsuario}`,
+             // lobbyName: `Partida de ${nomeUsuario}`,
               playerSlots: PartidaDados.playerSlots  
           })
           
