--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -147,7 +147,7 @@
 
   PartidaDados.playerSlots = Jogadores;
 
-  atualizarParcialmenteLobby(lobbyId,Jogadores);
+  atualizarParcialmenteLobby(lobbyId,PartidaDados.playerSlots);
 
       
     }
