--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -148,7 +148,7 @@
   PartidaDados.playerSlots = Jogadores;
 
   atualizarParcialmenteLobby(lobbyId,PartidaDados);
-  console.log(PartidaDados);
+  console.log("djasdjlkas" + PartidaDados);
       
     }
 
