--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -149,6 +149,7 @@
 
   atualizarParcialmenteLobby(lobbyId,PartidaDados);
   console.log("djasdjlkas" + PartidaDados);
+  console.log(Jogadores);
       
     }
 
