--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -148,8 +148,8 @@
   PartidaDados.playerSlots = Jogadores;
 
   atualizarParcialmenteLobby(lobbyId,PartidaDados);
-  console.log("djasdjlkas" + PartidaDados);
-  console.log(Jogadores);
+  console.log("djasdjlkas" + Jogadores);
+  
       
     }
 
