--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -155,7 +155,10 @@
 
       console.log("Jogadores atualizados:", Jogadores);
       
+      const distribuicao = distribuirTerritorios(Jogadores);
       
+      const array = embaralharArray();
+      console.log(array);
 
     }
 
