--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -155,7 +155,7 @@
 
       console.log("Jogadores atualizados:", Jogadores);
             
-      const array = embaralharArray();
+      const array = embaralharArray(path);
       console.log(array);
 
     }
