--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -112,6 +112,21 @@
       return cores;
     }
 
+    function aplicarCores(jogadores) {
+  const svgObject = document.getElementById('svgObject');
+  svgObject.addEventListener('load', function() {
+    const svgDoc = svgObject.contentDocument;
+    jogadores.forEach((jogador, index) => {
+      const territorioId = `territorio${index + 1}`;
+      const territorio = svgDoc.getElementById(territorioId);
+      if (territorio) {
+        territorio.style.fill = jogador.cor; // Aplica a cor ao território
+      } else {
+        console.warn(`Território ${territorioId} não encontrado no SVG.`);
+      }
+    });
+  });
+}
     async function main() {
       const urlParams = new URLSearchParams(window.location.search);
       const lobbyId = urlParams.get('id');
