--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -185,7 +185,7 @@
       await atualizarParcialmenteLobby(lobbyId, PartidaDados);
 
       // Aplicar cores aos territórios
-      aplicarCores(Jogadores);
+      aplicarCores();
 
       console.log("Jogadores atualizados:", Jogadores);
             
