--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -78,7 +78,7 @@
       // Aplicar cores aos territórios
       aplicarCores();
 
-      console.log("Jogadores atualizados:", Jogadores);
+      console.log("Jogadores atualizados:");
             
     }
 
