--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -86,7 +86,9 @@
     main();
     
     // Chamar a função para atribuir IDs numéricos aos paths
+    document.addEventListener('DOMContentLoaded', function() {
     atribuirIDsNumericos();
+    }); 
   </script>
 </body>
 </html>
