--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -82,8 +82,12 @@
       // Aplicar cores aos territórios
 
       console.log("Jogadores atualizados:");
-            
-      aplicarCores();
+      try {
+        aplicarCores();
+
+      } catch (error) {
+        
+      }      
 
     }
 
