--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
+  <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg" onload="svgLoaded()"></object>
   
   <script src="/Partida/Partida.js"></script> <!-- Certifique-se de que o script Partida.js é carregado primeiro -->
 
