--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -21,6 +21,7 @@
   </style>
 </head>
 <body>
+  
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg" onload="svgLoaded()"></object>
   
   <script src="/Partida/Partida.js"></script> <!-- Certifique-se de que o script Partida.js é carregado primeiro -->
@@ -30,7 +31,7 @@
     function svgLoaded() {
         console.log("SVG carregado");
 
-        aplicarCores(PartidaDados);
+        aplicarCores();
     }
 
     document.addEventListener('DOMContentLoaded', function() {
