--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -28,7 +28,7 @@
 
   <script>
     // Função para identificar e destacar territórios
-   async function svgLoaded() {
+    function svgLoaded() {
         console.log("SVG carregado");
         aplicarCores();
     }
