--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -11,8 +11,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: rgb(60, 60, 255);
-      
+      background-image: url('caminho/para/sua-imagem.jpg');
+      background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
+      background-repeat: repeat; /* Repete a imagem na página */
     }
 
     #svgObject {
