--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-image: url('caminho/para/sua-imagem.jpg');
+      background-image: url("");
       background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
       background-repeat: repeat; /* Repete a imagem na página */
     }
