--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -11,7 +11,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-image: url("");
+
+      background-image: url('Mar.jpg');
+
       background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
       background-repeat: repeat; /* Repete a imagem na página */
     }
