--- a/Partida/cores.html
+++ b/Partida/cores.html
@@ -31,6 +31,8 @@
         'rgb(255, 255, 255)',// Branco
         'rgb(255, 165, 0)'   // Laranja
       ];
+      return cores;
+    }
 
       // Embaralhar as cores
       embaralharArray(cores);
