--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -12,7 +12,7 @@
       justify-content: center;
       align-items: center;
 
-      background-image: url('Mar.jpg');
+      background-image: rgb(0, 68, 255);
 
       background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
       background-repeat: repeat; /* Repete a imagem na página */
