--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -14,8 +14,8 @@
 
       background-image: rgb(0, 68, 255);
 
-      background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
-      background-repeat: repeat; /* Repete a imagem na página */
+  /*    background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
+ /*     background-repeat: repeat; /* Repete a imagem na página */
     }
 
     #svgObject {
