--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -11,12 +11,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
-      background-image: rgb(0, 68, 255);
-
-  /*    background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
- /*     background-repeat: repeat; /* Repete a imagem na página */
-    }
+      background-color: rgb(60, 60, 255);
+}
 
     #svgObject {
       max-width: 100%;
