--- a/Partida/cores.html
+++ b/Partida/cores.html
@@ -21,15 +21,15 @@
 
     // Função para atribuir cores aleatoriamente aos jogadores
     function atribuirCores() {
-      const cores = [
-        'rgb(255, 255, 0)',  // Amarelo
-        'rgb(0, 128, 0)',    // Verde
-        'rgb(255, 0, 0)',    // Vermelho
-        'rgb(0, 0, 255)',    // Azul
-        'rgb(255, 105, 180)',// Rosa
-        'rgb(128, 0, 128)',  // Roxo
-        'rgb(255, 255, 255)',// Branco
-        'rgb(255, 165, 0)'   // Laranja
+      const cores = [    
+    'rgb(255, 0, 0)',
+    'rgb(255, 255, 0)', // Verde
+    'rgb(0, 255, 0)', // Amarelo
+    'rgb(128, 0, 128)', // Vermelho
+    'rgb(255, 165, 0)', // Rosa
+    'rgb(255, 192, 203)', // Laranja
+    'rgb(165, 42, 42)', // Cinza
+    'rgb(128, 128, 128)'  // Roxo  
       ];
       
 
