--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -37,9 +37,13 @@
 
       const urlParams = new URLSearchParams(window.location.search);
       const lobbyId = urlParams.get('id');
-      
-      CoresMain(lobbyId);
 
+      if (Consultarfase(lobbyId) == 0){
+      CoresMain(lobbyId);
+      }
+      else if(Consultarfase(lobbyId) == 1){
+        console.log("Partida ja iniciada...na fase 1")
+      }
     
 
     const svgObject = document.getElementById('svgObject');
