--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -38,7 +38,7 @@
       const urlParams = new URLSearchParams(window.location.search);
       const lobbyId = urlParams.get('id');
 
-     // console.log(Consultarfase(lobbyId));
+      console.log(Consultarfase(lobbyId));
 
 
       if (Consultarfase(lobbyId) == 0){
