--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -37,7 +37,7 @@
 
       const urlParams = new URLSearchParams(window.location.search);
       const lobbyId = urlParams.get('id');
-      const Fase = Consultarfase(lobbyId);
+      const Fase = await Consultarfase(lobbyId);
       
       console.log(Fase);
 
