--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -41,7 +41,7 @@
       async function consultar(){
       const Fase = await Consultarfase(lobbyId);
       console.log(Fase);
-
+      return Fase;
     }
     consultar()
       
