--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -43,7 +43,7 @@
       console.log(Fase);
       return Fase;
     }
-    consultar()
+   const Fase = consultar();
       
 
       if (Fase == 0){
