--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -42,8 +42,9 @@
       const Fase = await Consultarfase(lobbyId);
       return Fase;
     }
+   let Fase2 = consultar();
       
-   console.log("FASE:"+Fase);
+   console.log("FASE:"+Fase2);
 
       if (Fase == 0){
       CoresMain(lobbyId);
