--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -46,10 +46,10 @@
       
    console.log("FASE:"+Fase2);
 
-      if (Fase == 0){
+      if (Fase2 == 0){
       CoresMain(lobbyId);
       }
-      else if(Fase == 1){
+      else if(Fase2 == 1){
         console.log("Partida ja iniciada...na fase 1");
       }
     
