--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -46,7 +46,7 @@
         }
         
         if (Fase == 1){
-          Console.log("Fase 1, ja iniciado");
+          console.log("Fase 1, ja iniciado");
         }
 
       }
