--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -30,8 +30,9 @@
   <script>
     // Função para identificar e destacar territórios
 
-
+    
     document.addEventListener('DOMContentLoaded', function() {
+    console.log("SVG Carregado...");
     atribuirIDsNumericos();
     }); 
 
