--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -33,7 +33,9 @@
     
     document.addEventListener('DOMContentLoaded', function() {
     console.log("SVG Carregado...");
-    atribuirIDsNumericos();
+    document.addEventListener('DOMContentLoaded', atribuirIDsNumericos);
+
+//    atribuirIDsNumericos();
     }); 
 
       const urlParams = new URLSearchParams(window.location.search);
