--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -33,9 +33,7 @@
     
     document.addEventListener('DOMContentLoaded', function() {
     console.log("SVG Carregado...");
-    document.addEventListener('DOMContentLoaded', atribuirIDsNumericos);
-
-//    atribuirIDsNumericos();
+    atribuirIDsNumericos();
     }); 
 
       const urlParams = new URLSearchParams(window.location.search);
