--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -31,10 +31,12 @@
     // Função para identificar e destacar territórios
 
     
-    document.addEventListener('DOMContentLoaded', function() {
+ /*   document.addEventListener('DOMContentLoaded', function() {
     console.log("SVG Carregado...");
     atribuirIDsNumericos();
     }); 
+*/
+    document.addEventListener('DOMContentLoaded', atribuirIDsNumericos);
 
       const urlParams = new URLSearchParams(window.location.search);
       const lobbyId = urlParams.get('id');
