--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -85,6 +85,9 @@
       </div>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral direita -->
+        <p>Nome do Jogador: <span id="nomeJogador"></span></p>
+        <p>Cor do Jogador: <span id="corjogador"></span></p>
+
         <p>Barra Lateral Direita</p>
       </div>
     </div>
@@ -105,6 +108,9 @@
       } else if (Fase == 1) {
         console.log("Fase 1, ja iniciado");
       }
+
+      ImprimirJogadores(lobbyId);
+
     }
 
     const svgObject = document.getElementById('svgObject');
