--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -109,7 +109,7 @@
         console.log("Fase 1, ja iniciado");
       }
 
-      ImprimirJogadores(lobbyId);
+      await ImprimirJogadores(lobbyId);
 
     }
 
