--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -86,7 +86,7 @@
       <div class="sidebar">
         <!-- Conteúdo da barra lateral direita -->
         <p>Nome do Jogador: <span id="nomeJogador"></span></p>
-        <p>Cor do Jogador: <span id="corjogador"></span></p>
+        <p>Cor do Jogador: <span id="corJogador"></span></p>
 
         <p>Barra Lateral Direita</p>
       </div>
