--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -85,8 +85,14 @@
       </div>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral direita -->
-        <p>Nome do Jogador: <span id="nomeJogador"></span></p>
-        <p>Cor do Jogador: <span id="corJogador"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador1"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador2"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador3"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador4"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador5"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador6"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador7"></span></p>
+        <p>Nome do Jogador: <span id="nomeJogador8"></span></p>
 
         <p>Barra Lateral Direita</p>
       </div>
